--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0"
+  },
+  "dependencies": {
+    "azure-storage": "^2.10.1"
   }
 }
