--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neofelisho/AggregateSmsService.git"
+  },
   "devDependencies": {
     "eslint": "^5.4.0",
     "eslint-config-standard": "^12.0.0",
@@ -20,6 +24,8 @@
     "eslint-plugin-standard": "^4.0.0"
   },
   "dependencies": {
-    "azure-storage": "^2.10.1"
+    "azure-storage": "^2.10.1",
+    "request": "^2.88.0",
+    "soap": "^0.25.0"
   }
 }
