--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "azure-storage": "^2.10.1",
+    "crypto": "^1.0.1",
+    "moment": "^2.22.2",
     "request": "^2.88.0",
     "soap": "^0.25.0"
   }
